src/test/ui/tutorial-suffix-inference-test.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/tutorial-suffix-inference-test.rs:9:5
   |
LL |     identity_u16(x);
   |     ^^^^^^^^^^^^^-^
   |                  |
   |                  expected `u16`, found `u8`
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:6:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     identity_u16({u16});
   |     ^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/tutorial-suffix-inference-test.rs:12:5
   |
LL |     identity_u16(y);
   |     ^^^^^^^^^^^^^-^
   |                  |
   |                  expected `u16`, found `i32`
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:6:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     identity_u16({u16});
   |     ^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/tutorial-suffix-inference-test.rs:21:5
   |
LL |     identity_u16(a);
   |     ^^^^^^^^^^^^^-^
   |                  |
   |                  expected `u16`, found `isize`
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:6:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     identity_u16({u16});
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
